--- a/package.json
+++ b/package.json
@@ -18,6 +18,11 @@
   },
   "homepage": "https://github.com/clean-s-1/output-dependency-js#readme",
   "devDependencies": {
-    "chai": "^4.3.6"
+    "chai": "^4.3.8",
+    "jest": "^29.6.4"
+  },
+  "dependencies": {
+    "jest-console": "^0.1.0"
   }
+  
 }
