--- a/.github/workflows/main-workflow.yml
+++ b/.github/workflows/main-workflow.yml
@@ -17,10 +17,10 @@ jobs:
         run:  sudo npm install
       
       - name: tshirts fail
-        run: "node tshirts.spec.js"
+        run: "npx mocha tshirts.spec.js"
 
       - name: misaligned fail
-        run: "node misaligned.spec.js"
+        run: "npx mocha misaligned.spec.js"
 
       - name: alerter fail
-        run: "node alerter.spec.js"
+        run: "npx mocha alerter.spec.js"
